Add JWT and CoreMock
